--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -136,7 +136,7 @@
                      <image>
                         <Image url="@../Pictures/BackGround/compass.png" />
                      </image></ImageView>
-                  <Button fx:id="btnEndTurn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleEndTurnButtonAction" opacity="0.0" prefHeight="29.0" prefWidth="68.0" text="End Turn" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btnEndTurn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleEndTurnButtonAction" prefHeight="29.0" prefWidth="68.0" text="End Turn" textAlignment="CENTER" textFill="#56171a" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font name="Windlass" size="12.0" />
                      </font>
