--- a/WorldofZuul/src/GUI/HelpWindow.fxml
+++ b/WorldofZuul/src/GUI/HelpWindow.fxml
@@ -12,7 +12,7 @@
             <Font name="Windlass" size="14.0" />
          </font>
       </TextArea>
-      <Button fx:id="btnCloseWindow" alignment="CENTER" contentDisplay="CENTER" layoutX="246.0" layoutY="291.0" mnemonicParsing="false" onAction="#handleCloseWindowButtonAction" text="Close Window" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="btnCloseWindow" alignment="CENTER" contentDisplay="CENTER" layoutX="246.0" layoutY="291.0" mnemonicParsing="false" onAction="#handleCloseWindowButtonAction" text="Close Window" textAlignment="CENTER" textFill="#56171a" wrapText="true">
          <font>
             <Font name="Windlass" size="12.0" />
          </font>
