--- a/WorldofZuul/src/GUI/Winner.fxml
+++ b/WorldofZuul/src/GUI/Winner.fxml
@@ -28,7 +28,7 @@
                   <Font name="Windlass" size="14.0" />
                </font>
             </TextArea>
-            <Button fx:id="btnQuitFromWinning" alignment="BOTTOM_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleQuitButtonAction" text="Quit game" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button fx:id="btnQuitFromWinning" alignment="BOTTOM_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleQuitButtonAction" text="Quit game" textAlignment="CENTER" textFill="#56171a" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <font>
                   <Font name="Windlass" size="14.0" />
                </font>
