--- a/WorldofZuul/src/GUI/StartMenu.fxml
+++ b/WorldofZuul/src/GUI/StartMenu.fxml
@@ -2,17 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="592.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.StartMenuController">
+<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="592.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.StartMenuController">
    <children>
-      <ImageView id="StartMenuImage" fx:id="imgStartMenu" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../Pictures/BackGround/MunchkinWelcome%20vers%202.jpg" />
-         </image></ImageView>
+      <ImageView id="StartMenuImage" fx:id="imgStartMenu" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" />
       <Button id="StartGameBtn" fx:id="btnStartGame" alignment="CENTER" contentDisplay="CENTER" layoutX="264.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleStartGameButtonAction" text="Start Singleplayer Game" textFill="#56171a">
          <font>
             <Font name="Windlass" size="20.0" />
